data/collection/fixes/descriptions/kotlin/KT-26936
As per [KEEP on Experimental](https://github.com/Kotlin/KEEP/issues/95), ["Experimentality of Experimental/UseExperimental itself" section](https://github.com/Kotlin/KEEP/blob/master/proposals/experimental.md#experimentality-of-experimentaluseexperimental-itself), we need to report a **warning**, not an error on usages of Experimental/UseExperimental.

```
@Experimental
annotation class E
```

currently results in:
```
2.kt:1:2: error: this class can only be used with the compiler argument '-Xuse-experimental=kotlin.Experimental'
@Experimental
 ^
```